--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@
 # Site
 title: Ace's Site
 subtitle:
-description:
-author: fangli
+description: 学习的进步在于总结
+author: 方立
 language: zh-Hans
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://fangli.me
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
